feat(mod_block_early): so voip push does not get delivered

--- a/rel/files/ejabberd.cfg
+++ b/rel/files/ejabberd.cfg
@@ -694,6 +694,7 @@
 %%
 {modules,
  [
+  {mod_early_block, []},
 
   %% The format for a single route is as follows:
   %% {Host, Path, Method, Upstream}
